--- a/app/src/main/res/layout/activity_deshabilitar_habitacion.xml
+++ b/app/src/main/res/layout/activity_deshabilitar_habitacion.xml
@@ -32,6 +32,7 @@
                     app:rippleColor="@color/azulClaro" />
 
                 <TextView
+                    android:id="@+id/tvEnunciadobarDH"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Deshabilitar Habitación"
