--- a/app/src/main/res/layout/activity_agregar_producto_mb.xml
+++ b/app/src/main/res/layout/activity_agregar_producto_mb.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Vista.Administrador.GestionProductos.SeleccionarProducto">
+    tools:context=".Vista.Administrador.GestionHabitaciones.AgregarProductoMB">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
                 android:background="@color/azulPalido">
 
                 <Button
-                    android:id="@+id/btnRegresarSP"
+                    android:id="@+id/btnRegresar2MB"
                     style="@style/Widget.Material3.Button.TextButton"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
@@ -32,7 +32,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Seleccionar Producto"
+                    android:text="Agregar Producto"
                     android:textColor="@color/azulOscuro"
                     android:textSize="20sp" />
             </com.google.android.material.appbar.MaterialToolbar>
@@ -40,38 +40,64 @@
         </com.google.android.material.appbar.AppBarLayout>
 
         <TextView
-            android:id="@+id/tvEnunciadoSP"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:text="ENUNCIADO"
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center_horizontal"
+            android:text="Seleccione los productos"
             android:textColor="@color/azulOscuro"
-            android:textSize="23sp" />
+            android:textSize="23sp"
+            android:textStyle="bold" />
+
+
 
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
             android:layout_width="match_parent"
             android:layout_height="65dp"
             android:layout_margin="15dp"
-            android:hint="Seleccione la categoría"
+            android:hint="Selecciona Categoría"
             app:boxStrokeColor="@color/azul"
             app:hintTextColor="@color/azul">
 
             <AutoCompleteTextView
-                android:id="@+id/actvCategoriaSP"
+                android:id="@+id/actvCategoriaMB"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textColor="@color/azulOscuro"
-                android:inputType="none" />
-
+                android:inputType="none"
+                />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="5dp"
+            android:background="@color/grisFondo" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvSeleccionarProductoSP"
+            android:id="@+id/rvAgregarProductosMB"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/btnAgregarProductosMB"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        style="@style/Widget.Material3.Button"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:layout_margin="15dp"
+        android:backgroundTint="@color/azul"
+        app:rippleColor="@color/azulVerde"
+        android:text="Agregar Productos"
+        android:textSize="18sp"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
