--- a/app/src/main/res/layout/activity_agregar_producto_re.xml
+++ b/app/src/main/res/layout/activity_agregar_producto_re.xml
@@ -4,11 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Vista.Administrador.GestionProductos.SeleccionarProducto">
+    tools:context=".Vista.AdministradorEmpleado.AgregarProductoRE">
+
 
     <LinearLayout
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <com.google.android.material.appbar.AppBarLayout
@@ -21,7 +23,7 @@
                 android:background="@color/azulPalido">
 
                 <Button
-                    android:id="@+id/btnRegresarSP"
+                    android:id="@+id/btnRegresar2RE"
                     style="@style/Widget.Material3.Button.TextButton"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
@@ -39,39 +41,45 @@
 
         </com.google.android.material.appbar.AppBarLayout>
 
-        <TextView
-            android:id="@+id/tvEnunciadoSP"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:text="ENUNCIADO"
-            android:textColor="@color/azulOscuro"
-            android:textSize="23sp" />
-
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
             android:layout_width="match_parent"
             android:layout_height="65dp"
             android:layout_margin="15dp"
-            android:hint="Seleccione la categoría"
+            android:hint="Seleccione la Categoría"
             app:boxStrokeColor="@color/azul"
             app:hintTextColor="@color/azul">
 
             <AutoCompleteTextView
-                android:id="@+id/actvCategoriaSP"
+                android:id="@+id/actvCategoriaRE"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:inputType="none"
                 android:textColor="@color/azulOscuro"
-                android:inputType="none" />
+                android:textSize="18sp" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
-
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvSeleccionarProductoSP"
+            android:id="@+id/rvListaProductosRE"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
     </LinearLayout>
+
+    <Button
+        android:id="@+id/btnAgregarProductoRE"
+        style="@style/Widget.Material3.Button"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:layout_margin="15dp"
+        android:backgroundTint="@color/azul"
+        android:text="Agregar Producto"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:rippleColor="@color/azulVerde" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
