--- a/app/src/main/res/layout/cardview_lista_recyclerview.xml
+++ b/app/src/main/res/layout/cardview_lista_recyclerview.xml
@@ -26,10 +26,10 @@
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
                 android:paddingLeft="14dp"
-                android:paddingRight="14dp"
-                android:layout_alignParentLeft="true"/>
+                android:paddingRight="14dp" />
 
             <LinearLayout
                 android:id="@+id/rlContenidoRecyclerView"
