--- a/app/src/main/res/layout/activity_iniciar_sesion.xml
+++ b/app/src/main/res/layout/activity_iniciar_sesion.xml
@@ -42,6 +42,7 @@
                 android:drawablePadding="7dp"
                 android:drawableTint="@color/azul"
                 android:inputType="textPersonName"
+                android:text="Admin"
                 android:textColor="@color/azulOscuro"
                 android:textSize="18sp" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -66,6 +67,7 @@
                 android:drawablePadding="7dp"
                 android:drawableTint="@color/azul"
                 android:inputType="textPassword"
+                android:text="Admin"
                 android:textColor="@color/azulOscuro"
                 android:textSize="18sp" />
         </com.google.android.material.textfield.TextInputLayout>
